src/objects/NAFS_User_Territory__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>NAFS User Zone</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>NAFS User Territory</label>
</CustomObject>